Further polish